commit the AI modifications to Line and Point, add another test for the Line class to make sure I understand how the line is scaling all the points in its list of points